fix: column alignment

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -82,7 +82,6 @@
 @media (min-width: 900px) {
     .columns > div {
         display: flex;
-        align-items: center;
         flex-direction: unset;
     }
 
